syntax = "proto3";

package documents;

service DocumentsService {

}
